'all' now fetches full contact list

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,1 +1,11 @@
-<h1>Home Page</h1>
+<h1>Fabulous Friends</h1>
+
+<div class="options">
+  <button id="all">All</button>
+  <button>Show [id]</button>
+  <button>Search [keyword]</button>
+  <button>Add new contact</button>
+</div>
+<hr>
+<table id="contacts">
+</table>
